CMAKE_MINIMUM_REQUIRED(VERSION 3.16)

PROJECT("rvstd" CXX)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
SET(CMAKE_CXX_FLAGS_COVERAGE "-O0 --coverage")

SET(ENABLE_TESTS ON)
SET(ENABLE_RVSTD_XT OFF)

ADD_LIBRARY(rvstd)

FIND_PACKAGE(
  Boost 1.82
  COMPONENTS json
  REQUIRED
)

# rvstd-core
TARGET_INCLUDE_DIRECTORIES(
  rvstd PUBLIC $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
               $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>/include
)
TARGET_SOURCES(
  rvstd
  PRIVATE
    "src/rvstd/boost_json_ext.cpp"
    "src/rvstd/unique_identifier.cpp"
    "src/rvstd/tableau.cpp"
    "src/rvstd/options.cpp"
    "src/rvstd/resource.cpp"
)
TARGET_LINK_LIBRARIES(
  rvstd
  PUBLIC
    Boost::json
)
SET_TARGET_PROPERTIES(
  rvstd
  PROPERTIES
    CMAKE_CXX_FLAGS_COVERAGE "-O0 --coverage"
)

IF(ENABLE_TESTS)
  ADD_SUBDIRECTORY(tests)
  ENABLE_TESTING()
ENDIF()

IF(ENABLE_RVSTD_XT)
  ADD_SUBDIRECTORY(xt)
ENDIF()
